--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -13,7 +13,7 @@
 .contactPageTitle {
   font-size: 2rem;
   font-weight: 600;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
 }
 
 .contactDesc {
