--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -61,8 +61,8 @@
 
 .mobMenuImg {
   object-fit: cover;
-  height: 3.5zrem;
-  width: 3.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
   display: none;
 }
 
